# judge-runner

./: Cargo.toml  README.md
.github/workflows/: check.yaml  test.yaml
examples/: basic.rs
src/: checker.rs  judge.rs  lib.rs  metrics.rs  util.rs  verdict.rs
src/language/: cpp.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/sandbox/: cgroup.rs  mod.rs  resource.rs
tests/: should_return_accepted.rs  util.rs
tests/problem/easy/hello-world/checker/: main.cpp
tests/problem/easy/hello-world/solution/: main.cpp  main.java  main.py  main.rs  main.ts
tests/problem/easy/maximum-sum-of-digits/checker/: main.cpp
tests/problem/easy/maximum-sum-of-digits/solution/: main.cpp  main.java  main.py  main.rs  main.ts
