[package]
name = "judge-runner"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/f-code-club/judge-runner"
homepage = "https://github.com/f-code-club/judge-runner"
description = """
A code runner library for online judge system
"""

[dependencies]
bon = "3.8.1"
byte-unit = "5.2.0"
cgroups-rs = "0.5.0"
state-shift = "2.1.1"
timeout-readwrite = "0.4.0"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
rand = "0.9.2"
